--- a/templates/single.html
+++ b/templates/single.html
@@ -4,7 +4,7 @@
 
 <div class="col-md-12 post-youtube youtube-single">
     {% if song.youtube %}
-    <div cid="player" class="col-md-6 youtube-div">
+    <div id="player" class="col-md-6 youtube-div">
        <iframe
             class='youtube-iframe'
             src="https://www.youtube.com/embed/{{song.youtube}}"
