--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -84,6 +84,32 @@ ul{
 
 /*  playlists   */
 
+.latest{
+    background-color: black;
+}
+.orange{
+    color: #CC7000;
+}
+
+.latest-info{
+    margin-bottom: 3vh;
+}
+
+.playlist-h1{
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+}
+
+.youtube-iframe-front{
+    display: block;
+    width: 30vw;
+    height: 27vh;
+    padding-top: 2vh;
+    padding-bottom: 2vh;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .create-playlist{
     margin: 20px;
 }
@@ -105,7 +131,6 @@ ul{
     margin-bottom: 7vh;
     border: 2px solid #88887B;
 }
-
 .playlist-tile-text{
     color: #DCDCDC;
 }
@@ -160,15 +185,7 @@ ul{
     margin-top: 2vh;
 }
 
-.youtube-iframe-front{
-    display: block;
-    width: 25vw;
-    height: 30vh;
-    padding-top: 2vh;
-    padding-bottom: 2vh;
-    margin-left: auto;
-    margin-right: auto;
-}
+
 
 /*  single  */
 
