--- a/templates/playlists.html
+++ b/templates/playlists.html
@@ -13,8 +13,8 @@
         {% endif %}
     {% endwith %}
     </div>
-    <br>
-    <div class='text-center'>
+
+    <div class='col-md-12 text-center'>
         <br>
         <h1>Playlists</h1>
         <div class='create-playlist'>
