--- a/templates/publicplaylists.html
+++ b/templates/publicplaylists.html
@@ -16,37 +16,29 @@
     {% endwith %}
     </div>
     <br>
-    <br>
-    <div class='col-md-12 post-youtube'>
-        <div class="col-md-6">
+    <div class='col-md-12'>
+        <div class="col-md-6 col-md-offset-3 latest white-letter">
             <h2 class='text-center'>Latest Song</h2>
-            <div id="info" class="col-md-6">
 
-                <h3>"{{latest_song.title}}"</h3>
-                <h3>By {{latest_song.artist}}</h3>
-                <h4>In {{latest_song.playlist.name}} playlist</h4>
-            </div>
-            <div id="player" class="col-md-6 youtube-div">
+            <div id="player" class="youtube-div">
                 <iframe
                      class='youtube-iframe-front'
                      src="https://www.youtube.com/embed/{{latest_song.youtube}}"
                      frameborder="0" allowfullscreen>
                  </iframe>
+                 <h3 class='text-center latest-info'>"{{latest_song.title}}" By
+                     {{latest_song.artist}} In the {{latest_song.playlist.name}}
+                     playlist</h3>
             </div>
         </div>
-
     </div>
 
-
-    <br>
-    <br>
-    <div class='text-center'>
+    <div class='col-md-12 text-center playlist-h1'>
         <h1>Playlists</h1>
 
     </div>
     <br>
     <br>
-
 
 
     {% for playlist in playlists %}
