--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -84,6 +84,12 @@ ul{
 
 /*  playlists   */
 
+.top-row{
+    margin-top: 7vh;
+    margin-bottom: 5vh;
+}
+
+
 .latest{
     background-color: black;
 }
@@ -96,14 +102,16 @@ ul{
 }
 
 .playlist-h1{
-    margin-top: 1vh;
-    margin-bottom: 1vh;
+    margin-top: 17vh;
+    margin-bottom: 15vh;
 }
+
+
 
 .youtube-iframe-front{
     display: block;
-    width: 30vw;
-    height: 27vh;
+    width: 26vw;
+    height: 20vh;
     padding-top: 2vh;
     padding-bottom: 2vh;
     margin-left: auto;
