refactor: Refine Featured class, routing, and template

--- a/templates/newfeatured.html
+++ b/templates/newfeatured.html
@@ -19,19 +19,19 @@
         <h1>Featured Song</h1>
         <h3>Add a song</h3>
         <form method='post'>
-            <input type='text' class='input-song-featured' name='title'
+            <input type='text' class='input-song-featured' name='featured-title'
                 placeholder="Song Title (Required)">
             <br>
-            <input type='text' class='input-song-featured' name='artist'
+            <input type='text' class='input-song-featured' name='featured-artist'
                 placeholder="Artist (Required)">
             <br>
-            <input type='text' class='input-song-featured' name='genre'
+            <input type='text' class='input-song-featured' name='featured-genre'
                 placeholder="Genre">
             <br>
-            <input type='text' class='input-song-featured' name='youtube'
+            <input type='text' class='input-song-featured' name='featured-youtube'
                 placeholder="Youtube Link">
             <br>
-            <input type="text" class='input-song-featured' name='rendition'
+            <input type="text" class='input-song-featured' name='featured-rendition'
                 placeholder="Rendition of">
             <br>
             <a href="{{url_for('showPlaylists')}}">
