--- a/templates/publicplaylists.html
+++ b/templates/publicplaylists.html
@@ -19,8 +19,8 @@
     <div class='col-md-12 top-row'>
 
         <a class="playlist-title" href=>
-        <div class='container col-md-4 playlist-tile'>
-            <div class='top-playlist'>
+        <div class='container col-md-4 playlist-tile-special'>
+            <div class='top-playlist text-center'>
                 <h2 class='text-center playlist-tile-text'>
                         Featured Song
                 </h2>
@@ -50,8 +50,8 @@
         </div>
 
         <a class="playlist-title" href=>
-        <div class='container col-md-4 playlist-tile'>
-            <div class='top-playlist'>
+        <div class='container col-md-4 playlist-tile-special'>
+            <div class='top-playlist text-center'>
                 <h2 class='text-center playlist-tile-text'>
                         Latest Song
                 </h2>
