feat: Add featured singingle page routing and template

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -141,15 +141,15 @@ ul{
 }
 
 .playlist-tile-special{
-    height: 40vh;
+    height: 43vh;
 }
 
 .playlist-tile-text{
     color: #DCDCDC;
 }
 
+.playlist-tile-special:hover .playlist-tile-text,
 .playlist-tile:hover .playlist-tile-text{
-    opacity: .8;
     color: #7A4300;
 }
 
