--- a/templates/publicplaylists.html
+++ b/templates/publicplaylists.html
@@ -18,12 +18,15 @@
     <br>
     <div class='col-md-12 top-row'>
 
-        <a class="playlist-title" href=>
+
         <div class='container col-md-4 playlist-tile-special'>
             <div class='top-playlist text-center'>
-                <h2 class='text-center playlist-tile-text'>
-                        Featured Song
-                </h2>
+                <a class="playlist-title" href="{{url_for('showFeaturedSingle',
+                    featured_song_id = featured.id)}}">
+                    <h2 class='text-center playlist-tile-text'>
+                            Featured Song
+                    </h2>
+                </a>
                 <hr>
                 <div class='playlist-tile-text'>
                     <h4 class='playlist-description'>{{featured.title}}</h4>
@@ -42,19 +45,21 @@
             </div>
             <br>
         </div>
-        </a>
+
 
 
         <div class='col-md-4 text-center'>
             <h1 class="playlist-h1">Playlists</h1>
         </div>
 
-        <a class="playlist-title" href=>
+
         <div class='container col-md-4 playlist-tile-special'>
             <div class='top-playlist text-center'>
+                <a class="playlist-title" href=>
                 <h2 class='text-center playlist-tile-text'>
                         Latest Song
                 </h2>
+                </a>
                 <hr>
 
                 <div class='playlist-tile-text'>
@@ -73,7 +78,6 @@
             </div>
             <br>
         </div>
-        </a>
 
 
     </div>
