--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -96,14 +96,15 @@ ul{
     margin-bottom: 3vh;
 }
 
-.playlist-h1,
-.playlist-h1-logged{
-    margin-top: 15vh;
+.playlist-h1{
+    margin-top: 5vh;
     margin-bottom: 15vh;
+    font-size: 50px;
 }
 
-.playlist-h1-logged{
+.playlist-h1{
     margin-bottom: 2vh;
+    font-variant: small-caps;
 }
 
 .youtube-iframe-front{
@@ -146,6 +147,10 @@ ul{
 
 .playlist-tile-text{
     color: #DCDCDC;
+}
+
+.special-h2{
+    font-variant: small-caps;
 }
 
 .playlist-tile-special:hover .playlist-tile-text,
