--- a/templates/playlists.html
+++ b/templates/playlists.html
@@ -16,24 +16,47 @@
 
 
     <div class='col-md-12 top-row'>
-        <div class="col-md-4 latest white-letter">
-            <h2 class='text-center'>Latest Song</h2>
+        <div class='container col-md-4 playlist-tile-special'>
+            <div class='top-playlist text-center'>
+                <a class="playlist-title" href="{{url_for('showFeaturedSingle',
+                    featured_song_id = featured.id)}}">
+                    <h2 class='text-center playlist-tile-text special-h2'>
+                            Featured Song
+                    </h2>
+                </a>
+                <hr>
+                <div class='playlist-tile-text'>
+                    <h4 class='playlist-description'>{{featured.title}}</h4>
+                    <p class='playlist-description'>by {{featured.artist}}</p>
+                    <br>
+                    <div id="player" class="youtube-div">
+                        <iframe
+                             class='youtube-iframe-front'
+                             src="https://www.youtube.com/embed/{{featured.youtube}}"
+                             frameborder="0" allowfullscreen>
+                         </iframe>
 
-            <div id="player" class="youtube-div">
-                <iframe
-                     class='youtube-iframe-front'
-                     src="https://www.youtube.com/embed/{{latest_song.youtube}}"
-                     frameborder="0" allowfullscreen>
-                 </iframe>
-                 <h4 class='text-center latest-info'>"{{latest_song.title}}" By
-                     {{latest_song.artist}} In the {{latest_song.playlist.name}}
-                     playlist</h4>
+                    </div>
+                    <h5 class='playlist-time text-left'>Last Modified: {{featured.time_created}}</h5>
+                </div>
             </div>
+            <br>
         </div>
 
 
-        <div class='col-md-4 text-center'>
-            <h1 class="playlist-h1-logged">Playlists</h1>
+        <div class='col-md-4 text-center playlist-tile-special white-letter'>
+            <h1 class="playlist-h1">Welcome</h1>
+
+            <div class='container-fluid'>
+                <div class='col-md-8 col-md-offset-2 '>
+                <p>
+                    Thanks for visitng my music catalog!  Feel free to add your
+                     own playlists, or just browse the playlists below to
+                     listen to the music I like.
+                </p>
+                </div>
+            </div>
+
             <div class='create-playlist'>
                 <a href = "{{url_for('newPlaylist')}}">
                     <button type="button" class="btn btn-default create-playlist-btn">Create New Playlist
@@ -42,26 +65,35 @@
             </div>
         </div>
 
-        <div class="col-md-4 latest white-letter">
-            <h2 class='text-center'>Latest Song</h2>
+        <div class='container col-md-4 playlist-tile-special'>
+            <div class='top-playlist text-center'>
+                <a class='song-list' href="{{url_for('showSingle',
+                    playlist_id = latest_song.playlist_id,
+                    song_id = latest_song.id)}}">
+                    <h2 class='text-center playlist-tile-text special-h2'>
+                            Latest Song
+                    </h2>
+                </a>
+                <hr>
 
-            <div id="player" class="youtube-div">
-                <iframe
-                     class='youtube-iframe-front'
-                     src="https://www.youtube.com/embed/{{latest_song.youtube}}"
-                     frameborder="0" allowfullscreen>
-                 </iframe>
-                 <h4 class='text-center latest-info'>"{{latest_song.title}}" By
-                     {{latest_song.artist}} In the {{latest_song.playlist.name}}
-                     playlist</h4>
+                <div class='playlist-tile-text'>
+                    <h4 class='playlist-description'>{{latest_song.title}}</h4>
+                    <p class='playlist-description'>by {{latest_song.artist}}</p>
+                    <br>
+                    <div id="player" class="youtube-div">
+                        <iframe
+                             class='youtube-iframe-front'
+                             src="https://www.youtube.com/embed/{{latest_song.youtube}}"
+                             frameborder="0" allowfullscreen>
+                         </iframe>
+                    </div>
+                    <h5 class='playlist-time text-left'>Last Modified: {{latest_song.time_created}}</h5>
+                </div>
             </div>
-
         </div>
 
     </div>
 
-
-    <br>
     {% for playlist in playlists %}
     <a class="playlist-title" href="{{url_for('showSongs', playlist_id = playlist.id)}}">
     <div class='container col-md-3 playlist-tile'>
