--- a/templates/featuredsingle.html
+++ b/templates/featuredsingle.html
@@ -1,11 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1 class="text-center featured-single-h1">
-    Featured Song
-</h1>
 
 <div class="col-md-12 post-youtube youtube-single featured-single">
+
 
     {% if featured.youtube %}
     <div id="player" class="col-md-6 youtube-div">
@@ -24,6 +22,9 @@
 
 
     <div class='col-md-4 col-md-offset-2 text-left single-info'>
+        <h1 class="text-center white-letter featured-single-h1">
+            Featured Song
+        </h1>
         <h2 class='white-letter'>"{{featured.title}}"</h2>
         <h2 class='white-letter'>{{featured.artist}}</h2>
         {% if featured.rendition %}
