--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -98,21 +98,18 @@ ul{
 
 .playlist-h1{
     margin-top: 5vh;
-    margin-bottom: 15vh;
+    margin-bottom: 5vh;
     font-size: 50px;
-}
-
-.playlist-h1{
-    margin-bottom: 2vh;
     font-variant: small-caps;
 }
+
+
 
 .youtube-iframe-front{
     display: block;
     width: 28vw;
     height: 26vh;
     padding-top: 2vh;
-    padding-bottom: 2vh;
     margin-left: auto;
     margin-right: auto;
 }
@@ -137,12 +134,12 @@ ul{
     padding-left,
     padding-right: 2vw;
     margin: 0;
-    margin-bottom: 7vh;
-    border: 2px solid #88887B;
+    border: 2px solid #515151;
+    border-collapse: collapse;
 }
 
 .playlist-tile-special{
-    height: 43vh;
+    height: 45vh;
 }
 
 .playlist-tile-text{
