--- a/templates/publicplaylists.html
+++ b/templates/publicplaylists.html
@@ -64,9 +64,8 @@
 
         <div class='container col-md-4 playlist-tile-special'>
             <div class='top-playlist text-center'>
-                <a class='song-list' href="{{url_for('showSingle',
-                    playlist_id = latest_song.playlist_id,
-                    song_id = latest_song.id)}}">
+                <a class='song-list' href="{{url_for('showSongs',
+                        playlist_id = latest_song.playlist_id)}}">
                     <h2 class='text-center playlist-tile-text special-h2'>
                             Latest Song
                     </h2>
