--- a/templates/playlists.html
+++ b/templates/playlists.html
@@ -16,7 +16,7 @@
 
 
     <div class='col-md-12 top-row'>
-        <div class='container col-md-4 playlist-tile-special'>
+        <div class='col-md-4 playlist-tile-special'>
             <div class='top-playlist text-center'>
                 <a class='song-list' href="{{url_for('showSongs',
                         playlist_id = latest_song.playlist_id)}}">
@@ -65,7 +65,7 @@
             </div>
         </div>
 
-        <div class='container col-md-4 playlist-tile-special'>
+        <div class='col-md-4 playlist-tile-special'>
             <div class='top-playlist text-center'>
                 <a class="playlist-title" href="{{url_for('showFeaturedSingle',
                     featured_song_id = featured.id)}}">
@@ -96,7 +96,7 @@
 
         {% for playlist in playlists %}
         <a class="playlist-title" href="{{url_for('showSongs', playlist_id = playlist.id)}}">
-        <div class='container col-md-3 playlist-tile'>
+        <div class='col-md-3 playlist-tile'>
 
             <div class='top-playlist '>
                 <h2 class='text-center playlist-tile-text'>
