--- a/templates/playlists.html
+++ b/templates/playlists.html
@@ -43,7 +43,7 @@
         </div>
 
 
-        <div class='col-md-4 text-center playlist-tile-special white-letter'>
+        <div class='col-md-4 text-center welcome-tile'>
             <h1 class="playlist-h1">Welcome</h1>
 
             <div class='container-fluid'>
