--- a/templates/publicplaylists.html
+++ b/templates/publicplaylists.html
@@ -47,7 +47,7 @@
 
 
 
-        <div class='col-md-4 text-center playlist-tile-special white-letter'>
+        <div class='col-md-4 text-center welcome-tile'>
             <h1 class="playlist-h1">Welcome</h1>
 
             <div class='container-fluid'>
