refactor: Change background color for nav bar

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -25,7 +25,7 @@ a:hover{
 .top-part{
     padding-top: 3vh;
     padding-bottom: 2vh;
-    background-color: #111135;
+    background-color: #08081A;
     vertical-align: middle;
 }
 
