--- a/templates/publicplaylists_revamp.html
+++ b/templates/publicplaylists_revamp.html
@@ -39,7 +39,7 @@
                              frameborder="0" allowfullscreen>
                          </iframe>
                     </div>
-                    <h5 class='playlist-time text-left'>Last Modified: {{latest_song.time_created}}</h5>
+
                 </div>
             </div>
             <br>
@@ -82,7 +82,7 @@
                          </iframe>
 
                     </div>
-                    <h5 class='playlist-time text-left'>Last Modified: {{featured.time_created}}</h5>
+                    <h5 class='playlist-time text-left'>Last Modified: {{featured.time_created.strftime('%b %d, %Y')}}</h5>
                 </div>
             </div>
             <br>
@@ -106,6 +106,7 @@
                 <h2>{{playlist.name}}</h2>
                 <p>{{playlist.description}}</p>
                 <h4>Latest Song: {{get_latest_song(playlist.id).title}} By {{ get_latest_song(playlist.id).artist }}</h4>
+                <h5>Updated {{playlist.time_updated.strftime('%b %d, %Y')}}</h5>
                 </a>
             </div>
 
