--- a/templates/base.html
+++ b/templates/base.html
@@ -42,12 +42,12 @@
     <body>
         <div class="container-fluid">
             <div class='row top-part'>
-                <div class='col-md-4 logit'>
+                <div class='col-md-3 text-center logit'>
                     <a id='home' class='linkage' href="{{url_for('showPlaylists')}}">
                         Aural History
                     </a>
                 </div>
-                <div class='col-md-offset-2 col-md-4 text-right logit'>
+                <div class='col-md-4 col-md-offset-5 text-center logit'>
                     {% if 'username' not in session %}
                     <a class='log linkage' id='login' href="{{url_for('showLogin')}}">Log In</a>
                     {% else %}
